--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Notes App</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>Hello Friends</h1>
+    <div class="mobile-container">
+        <header>
+            <input type="text">
+            <button id="search">Search</button>
+        </header>
+        <div class="fav-container">
+            <h3>Favorite Meals</h3>
+            <ul>
+                <li><img src="" alt=""><span></span></li>
+                <li><img src="" alt=""><span></span></li>
+                <li><img src="" alt=""><span></span></li>
+            </ul>
+        </div>
+        <div class="meals">
+            <div class="meal">
+                <div class="meal-header">
+                    <img src="" alt="">
+                </div>
+                <div class="meal-body">
+                    <h4>Veggie Veggies</h4>
+                    <button></button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
