--- a/index.html
+++ b/index.html
@@ -5,32 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="script.js"></script>
 </head>
 <body>
-    <div class="mobile-container">
-        <header>
-            <input type="text">
-            <button id="search">Search</button>
-        </header>
-        <div class="fav-container">
-            <h3>Favorite Meals</h3>
-            <ul>
-                <li><img src="" alt=""><span></span></li>
-                <li><img src="" alt=""><span></span></li>
-                <li><img src="" alt=""><span></span></li>
-            </ul>
+    <div class="notes">
+        <div class="tools">
+            <button><i class="fas fa-edit"></i></button>
+            <button><i class="fas fa-trash"></i></button>
         </div>
-        <div class="meals">
-            <div class="meal">
-                <div class="meal-header">
-                    <img src="" alt="">
-                </div>
-                <div class="meal-body">
-                    <h4>Veggie Veggies</h4>
-                    <button></button>
-                </div>
-            </div>
+        <div class="main">
+            <textarea></textarea>
         </div>
     </div>
 </body>
