--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 <body>
     <div class="notes">
         <div class="tools">
-            <button><i class="fas fa-edit"></i></button>
-            <button><i class="fas fa-trash"></i></button>
+            <button class="edit"><i class="fas fa-edit"></i></button>
+            <button class="delete"><i class="fas fa-trash"></i></button>
         </div>
-        <div class="main">
+        <div class="main hidden"></div>
             <textarea></textarea>
-        </div>
     </div>
 </body>
 </html>
