--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/1.1.1/marked.min.js"></script>
 </head>
 <body>
-    <div class="notes">
-        <div class="tools">
-            <button class="edit"><i class="fas fa-edit"></i></button>
-            <button class="delete"><i class="fas fa-trash"></i></button>
-        </div>
-        <div class="main hidden"></div>
-            <textarea></textarea>
-    </div>
+    <button class="add" id="add"><i class="fas fa-plus"></i> Add Note</button>
 
     <script src="script.js"></script>
 </body>
